<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/texte_principal"
                android:paddingEnd="16dp" />

            <TextView
                android:id="@+id/textViewPatientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_patient"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_reason"
            android:textSize="14sp"
            android:textColor="@color/admin_gris"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_date"
            android:textSize="12sp"
            android:textColor="@color/docteur_vert"
            android:layout_marginTop="8dp" />
            
        <Button
            android:id="@+id/btnComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Terminer la consultation"
            android:backgroundTint="#4CAF50"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

